# an4-iep

./: CMakeLists.txt  README.md  test.cpp
include/: Student.h
src/: Student.cpp  main.cpp
test/: CMakeLists.txt
test/include/: testl.h
test/src/: test.cpp
